# multimodal-feature-builder

./: LICENSE  README.md  data.csv  main.py  products.csv  products_with_paths.csv  random_forest_model.pkl  requirements.txt  run_builder.py  setup.cfg  setup.py
extractors/: image_features.py  tabular_features.py  text_features.py
multimodal_builder/: MultiModalFeatureBuilder.py  __init__.py
multimodal_feature_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/: run_builder.py
utils/: data_loader.py
